# kfunca

./: .gitignore  CMakeLists.txt  README.md  format.sh  install.sh  requirements.txt  setup.py  test.cpp
.github/workflows/: ci.yml
src/: register.cpp
src/core/: README.md  binary_ops.cpp  device_allocator.cpp  gemm_ops.cpp  index_ops.cpp  nn_ops.cpp  norm_ops.cpp  nullary_ops.cpp  reduce_ops.cpp  scalar_type.h  sort_ops.cpp  tensor.cpp  tensor.h  tensor_impl.cpp  tensor_iterator.cpp  tensor_shape.cpp  unary_ops.cpp
src/core/include/: accumulate_type.h  binary_ops.h  device_allocator.h  gemm_ops.h  half.h  index_ops.h  nn_ops.h  norm_ops.h  nullary_ops.h  reduce_ops.h  scalar_type.h  sort_ops.h  tensor.h  tensor_impl.h  tensor_iterator.h  tensor_shape.h  unary_ops.h
src/core/utils/: exception.h  xstring.h
src/device/: binary_ops_kernel.cu  causal_attention_kernel.cu  copy_engine.cu  device.cu  device.h  device_common.h  device_info.cu  device_info.h  device_property.cu  gemm.cu  gemm_kernel.cu  global_memory_bandwidth.cu  index_ops_kernel.cu  launcher.cu  launcher.h  launcher_cuda.h  memory_engine.cu  norm_ops_kernel.cu  nullary_ops_kernel.cu  op_binary.cu  reduce_ops_kernel.cu  scalar_type.h  sort_ops_kernel.cu  tensor.cu  tensor.h  tensor_storage.cu  tensor_storage.h  unary_ops_kernel.cu
src/device/core/: cuda_launcher.h
test/: common.py  test_gemm.py  test_nn.py  test_tensor.py
test/core/: test_data_ptr.cpp  test_device_allocator.cpp  test_intrusive_ptr.cpp  test_tensor.cpp
test/cpp/: test_device_allocator.cpp  test_tensor.cpp
tools/: cmake.py
(+43 files in other folders)
